# LambdaTrip

./: .env.example  .gitignore  QUICKSTART.md  README.md  SAM-DEPLOYMENT.md  STRIPE_MIGRATION_GUIDE.md  env.json.template  pyproject.toml  samconfig.toml  template.yaml
events/: analyze-image-event.json  analyze-itinerary-event.json  analyze-landmark-event.json  extract-text-event.json
extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  styles.css
firebase-hosting/: .firebaserc  firebase.json
firebase-hosting/public/: auth-tab.html  auth.js  index.html  payment.html  test-claims.html
firebase-hosting/public/css/: tailwind-runtime.css
firebase-hosting/react-landing/: package-lock.json  package.json  tailwind.config.js
firebase-hosting/react-landing/src/apps/traveler/: index.html  index.js  payment.html
firebase-hosting/react-landing/src/tailwind-css/: tailwind-build.css  tailwind-runtime.css
src/: README.md  requirements.txt
src/image_processor/: app.py
src/landmark_analyzer/: app.py
src/shared/: __init__.py  api_helpers.py  country_codes.py
tests/: test_apis.py
