[project]
name = "lambdatrip"
version = "0.1.0"
description = "AI-powered travel itinerary analyzer using AWS Lambda"
authors = [
    {name = "Ling-Yuan Chen", email = "alanchenly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "botocore>=1.29.0",
    "reportlab>=3.6.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.8.0",
    "jsonschema>=4.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lambdatrip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"] 